--- a/src/styles/Searchbar.module.css
+++ b/src/styles/Searchbar.module.css
@@ -20,3 +20,9 @@
   margin-right: 5px;
   border: none;
 }
+
+@media screen and (max-width: 550px) {
+  .Search {
+      max-width: 50%;
+  }
+}
